Bug 785324 - Return a FrameTarget with 'empty' flag set true when clicking on an empty block (also in the non-editable case).  r=roc